namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dso202-assignment-02
  labels:
    app.kubernetes.io/part-of: task-tracker
